--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,9 @@
       const db = firebase.firestore()
       db.settings({timeStampsInSnapshots: true});
       firebase.analytics();
-    </script>
+      // Initialize the FirebaseUI widget using Firebase
+      const ui = new firebaseui.auth.AuthUI(firebase.auth());
+      </script>
 
-  </body>
+</body>
 </html>
