--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel='favicon' type='favicon' href='img/favicon.svg' />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
