--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/img/favicon.svg"/>
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
